# tomi_kristof_package_test

./: .gitignore  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/tomi_kristof_package_test/: __init__.py  core.py
tests/: test_greeting.py
