[project]
name = "tomi-kristof-package-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Kristof Menyhert",email = "menyhert.kristof@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "tomi_kristof_package_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
